Добавляет возможность вернуть ответ из команды в том же формате, что принимает ctx.reply

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
+        "strict": false,
         "paths": {
             "*": ["node_modules/*"]
         },
